-
-  CHANGE LOG - WiiC
-
---------------------------

http://wiic.sf.net


---------------------------
v1.2  --  
---------------------------

	Added:
		-[Mac/Linux] Utility C++ method to enable/disable smoothing for accelerometers
		-[Mac/Linux] wiic-logger now supports timed logging, without any button pressure (useful when you need the device to be still, as for calibration)
 
	Changed:
		-[Mac/Linux] Different smoothing algorithm, now directly applied to the raw acc values

	Fixed:
		-[Mac/Linux] Fixed raw gravity vector computation

---------------------------
v1.1  --  17 Apr 2011
---------------------------

	Changed:
		-[Mac/Linux] Changed pitch and roll computation
		-[Mac/Linux] Changed the default smooth parameter for pitch and roll computation

	Fixed:
		-[Mac] Memory leak in Wiimote read

---------------------------
v1.00 --  11 Apr 2011
---------------------------

	Added:
		-[Mac/Linux] Wiimote logging system
		-[Mac/Linux] WiiC machine learning module

---------------------------
v0.53 -- 01 Sep 2010
---------------------------

	Added:
		-[Mac/Linux] Wiimote registration system
		-[Mac/Linux] WiiC configuration folder (.wiic)
		-[Mac/Linux] New Wiimote loading function ("wiic_load" for C and "CWii::LoadRegisteredWiimotes()" for C++)

---------------------------
v0.51 -- 21 Aug 2010
---------------------------

	Added:
		-[Mac/Linux] Motion Plus gyroscope threshold can be set by the user

	Changed:
		-[Mac/Linux] "wiiuse" prefix is not anymore used, everything starts with "wiic"
		-[Mac/Linux] Usual optimizations

---------------------------
v0.50 -- 08 Jul 2010
---------------------------

	Added:
		- [Mac/Linux] Full Balance Board support

---------------------------
v0.40 -- 17 May 2010
---------------------------

	Fixed:
		- [Mac] Fix for IOBluetoothHostController 
		- [Mac] wiiuse_poll is now non-blocking on Mac platforms too

	Changed:
		- [Linux/Mac] Removed old Windows stuff
		- [Mac] Changed environment variable
