@@ -6,11 +6,14 @@
 class AccSample : public Sample
 {
 public:
-	AccSample(float x, float y, float z) : Sample() { ax = x; ay = y; az = z; }
+	AccSample(float x, float y, float z);
+	AccSample(const string& line);
 	~AccSample() {}
 	inline float x() const { return ax;	}
 	inline float y() const { return ay;	}
 	inline float z() const { return az;	}
+	
+	virtual void save(ofstream& out);
 
 private:
 	float ax;
