@@ -8,66 +8,66 @@ Training::~Training()
 /***
  * Load data into a single training
  */
-void Training::loadTraining(ifstream& infile)
+bool Training::loadTraining(ifstream& training)
 {
-	string line;
-	getline(infile,line);
-	if(line == "acc") {
-		loadAccTraining(infile);
-		logType = LOG_ACC;
-	}
-	else
-		cout << "[Error]: bad log type." << endl;			
-}
-
-void Training::loadAccTraining(ifstream& infile)
-{
-	istringstream xIn, yIn, zIn;
-	string xLine, yLine, zLine;
-	float xAcc, yAcc, zAcc;
+	string sample, cmd;
 	
-	if(getline(infile,xLine) && getline(infile,yLine) && getline(infile,zLine)) {
-		xIn.str(xLine);
-		yIn.str(yLine);
-		zIn.str(zLine);
-		
-		while(xIn >> xAcc) {
-			yIn >> yAcc;
-			zIn >> zAcc;
-			samples.push_back(new AccSample(xAcc,yAcc,zAcc));
+	// Get a sample	
+	getline(training, sample);
+	
+	// Parse every sample to get the log type
+	istringstream sStr(sample);
+	sStr >> cmd;
+	
+	while(!training.eof() && cmd != "END" && cmd != "") {	
+		//cout << "comando " << cmd << endl;
+		if(cmd == "ACC") 
+			addSample(new AccSample(sStr.str()));
+		else if(cmd == "GYRO") 
+			addSample(new GyroSample(sStr.str()));
+		else {
+			cout << "[Error] Bad log type." << endl;	
+			return false;	
 		}
-	}
+		
+		getline(training, sample);
+		sStr.str(sample);
+		sStr >> cmd;
+	}		
+	
+	return true;
 }
 
 void Training::save(ofstream& out) const
 {	
-	if(logType == LOG_ACC) {
-		out << "acc" << endl;
+	// Training Header
+	out << "START" << endl;
+	
+	// Samples
+	for(int i = 0 ; i < samples.size() ; i++)
+		samples[i]->save(out);
 		
-		for(int i = 0 ; i < samples.size() ; i++) {
-			AccSample* s = (AccSample*)samples[i];
-			out << s->x() << " ";
-		}
-		out << endl;
-
-		for(int i = 0 ; i < samples.size() ; i++) {
-			AccSample* s = (AccSample*)samples[i];
-			out << s->y() << " ";
-		}
-		out << endl;
-
-		for(int i = 0 ; i < samples.size() ; i++) {
-			AccSample* s = (AccSample*)samples[i];
-			out << s->z() << " ";
-		}
-		out << endl;		
-	}
+	out << "END" << endl;
 }
 
 void Training::addSample(Sample* s)
 {
-	if(s)
+	// We retrieve the overall gesture timestamp
+	struct timeval t;
+	if(!samples.size()) {
+		gettimeofday(&timestamp,0);
+		t = timestamp;
+	}
+	else
+		gettimeofday(&t,0);
+		
+	// We compute the relative timestamp in msec
+	double t_msec = ((t.tv_sec*1000000.0 + t.tv_usec) - (timestamp.tv_sec*1000000.0 + timestamp.tv_usec))/1000.0;
+	
+	if(s) {
+		s->setTimestampMs(t_msec);
 		samples.push_back(s);
+	}
 }
 
 void Training::clear()
