@@ -1,7 +1,7 @@
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../wiic/)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../log/)
 
-SET(WIICPP_SOURCES wiicpp.cpp ../log/dataset.cpp ../log/training.cpp)
+SET(WIICPP_SOURCES wiicpp.cpp ../log/dataset.cpp ../log/training.cpp ../log/gyrosample.cpp ../log/accsample.cpp)
 ADD_LIBRARY(wiicpp SHARED ${WIICPP_SOURCES})
 TARGET_LINK_LIBRARIES(wiicpp wiic)
 
@@ -11,3 +11,4 @@ INSTALL(FILES ../log/training.h DESTINATION /usr/local/include/wiic/)
 INSTALL(FILES ../log/dataset.h DESTINATION /usr/local/include/wiic/)
 INSTALL(FILES ../log/sample.h DESTINATION /usr/local/include/wiic/)
 INSTALL(FILES ../log/accsample.h DESTINATION /usr/local/include/wiic/)
+INSTALL(FILES ../log/gyrosample.h DESTINATION /usr/local/include/wiic/)
